--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  body {
+    @apply bg-white m-0 p-0;
+  }
+  h1 {
+    @apply font-extrabold text-[64px];
+  }
+  h2 {
+    @apply font-extrabold text-[32px];
+  }
+  h3 {
+    @apply font-extrabold text-[32px];
+  }
+  h4 {
+    @apply font-medium text-[32px];
+  }
+  h5 {
+    @apply font-extrabold text-[24px];
+  }
+  p {
+    @apply font-normal text-[18px];
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@layer components {
+  .hero-background-grad {
+    @apply bg-gradient-to-r from-secondary via-secondary to-secondary/0;
   }
 }
